# aepsych

./: .gitattributes  0.3.0  CNAME  CONTRIBUTING.md  LICENSE  README.md  Readme.md  dev_requirements.txt  docker-compose.yml  help.html  index.html  mypy.ini  optional_requirements.txt  pyproject.toml  requirements.txt  setup.py  sitemap.xml  users.html
_sphinx-sources/: aepsych.benchmark.rst.txt  aepsych.database.rst.txt  aepsych.factory.rst.txt  aepsych.kernels.rst.txt  aepsych.server.rst.txt  generators.rst.txt
aepsych/: __init__.py  config.py  config.pyi  distributions.py  extensions.py  likelihoods.py  plotting.py  psychopy_handler.py  server.py  strategy.py  utils.py  utils_logging.py  version.py
api/: acquisition.html  aepsych.acquisition.html  aepsych.aepsych.html  aepsych.benchmark.html  aepsych.database.html  aepsych.factory.html  aepsych.generators.html  aepsych.html  aepsych.kernels.html  aepsych.means.html  aepsych.models.html  aepsych.server.html  benchmark.html  config.html  database.html  factory.html  generators.html  genindex.html  index.html  kernels.html  likelihoods.html  means.html  models.html  modules.html  plotting.html  py-modindex.html  search.html  server.html  setup.html  strategy.html  tests.acquisition.html  tests.generators.html  tests.html  tests.models.html  transforms.html  utils.html  utils_logging.html
configs/: ax_beta_regression_example.ini  ax_example.ini  ax_ordinal_exploration_example.ini  ax_pairwise_opt_example.ini  ax_warm_start_fitting.ini  independent_gps_example.ini  mixed_likelihood_constraints_example.ini  (+8 more)
(+956 files in other folders)
